--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>Made with ❤ in Londom</p>
+        <p>Drum kit made with HTML, CSS and Javascript.</p>
     </footer>
 
     <script src="script.js"></script>
